# map_reduce-

./: Cargo.toml  Makefile  build.rs  telemetry-id
input/: file1.txt  file2.txt  file3.txt  file4.txt
output/: mr-0-0  mr-0-1  mr-0-2  mr-0-3  mr-0-4  mr-1-0  mr-1-1  mr-1-2  mr-1-3  mr-1-4  mr-2-0  mr-2-1  mr-2-2  mr-2-3  mr-3-0  mr-3-1  mr-3-2  mr-3-3  mr-3-4  mr-4-0  mr-4-1  mr-4-2  mr-4-3  mr-4-4  mr-out-0  mr-out-1  mr-out-2  mr-out-3  mr-out-4
proto/: mapreduce.proto
src/: client.rs  lib.rs  master.rs  models.rs  rpc.rs  server.rs  worker.rs
