[package]
name = "mapreduce"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.4"
tonic-prost-build = "0.14.4"



[[bin]]
name="master"
path="bin/master.rs"


[[bin]]
name="worker"
path="bin/worker.rs"
