[package]
name = "mapreduce"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
log = "0.4"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
[[bin]]
name="master"
path="bin/master.rs"


[[bin]]
name="worker"
path="bin/worker.rs"
